--- a/Beta/src/main/resources/templates/user/home.html
+++ b/Beta/src/main/resources/templates/user/home.html
@@ -27,6 +27,9 @@
             </div>
             <div class="panel-body">
 
+                <input type="button" value="Przelew" onclick="transferPage();" />
+                <a href="transfer.html" class="costam">cool!</a>
+
                 <p class="admin-message-text text-center" th:utext="${saldo}"></p>
 
                 <img th:src="@{/images/logo.png}" class="img-responsive center-block" width="400" height="400"
