html templates (transferForm and changePassForm)

--- a/Beta/src/main/resources/templates/user/changePassForm.html
+++ b/Beta/src/main/resources/templates/user/changePassForm.html
@@ -27,12 +27,12 @@
             </div>
             <div class="panel-body">
 
-                <h1>Przelew: !</h1>
+                <h1>Zmiana hasła!</h1>
                 <form id="changePass" action="changePass" method="post">
 
                     <table>
-                        <td>Numer konta:</td><td><input type="text" name="accountNumber"></td><br>
-                        <td>Kwota:</td><td><input type="text" name="howMany"></td><br>
+                        <td>Hasło:</td><td><input type="password" name="passA"></td><br>
+                        <td>Powtórz hasło:</td><td><input type="password" name="passB"></td><br>
                     </table>
                     <input type="submit">
                 </form>
