--- a/Beta/src/main/resources/templates/user/home.html
+++ b/Beta/src/main/resources/templates/user/home.html
@@ -27,8 +27,8 @@
             </div>
             <div class="panel-body">
 
-                <input type="button" value="Przelew" onclick="transferPage();" />
-                <a href="transfer.html" class="costam">cool!</a>
+                <a href="transfer.html" class="costam">Przelew!</a><br>
+                <a href="changePassForm.html" class="costam">Zmień hasło!</a>
 
                 <p class="admin-message-text text-center" th:utext="${saldo}"></p>
 
